--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
     background-color: hotpink;
     color: black;
     font-family: monospace;
+    text-transform: uppercase;
     font-size: 30px;
 }
 
