--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 
 @mixin default {
     background-color: hotpink;
-    color: black;
+    color: rgb(0, 0, 0);
     font-family: monospace;
     text-transform: uppercase;
     font-size: 30px;
@@ -9,7 +9,6 @@
 
 #header{
     p{
-        font-family: monospace;
         @include default;
     }
 }
