--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 
 @mixin default {
     background-color: hotpink;
-    color: rgb(0, 0, 0);
+    color: black;
     font-family: monospace;
     text-transform: uppercase;
     font-size: 30px;
