--- a/trash/style.css
+++ b/trash/style.css
@@ -1,8 +1,8 @@
 #header p {
-  font-family: monospace;
   background-color: hotpink;
   color: black;
   font-family: monospace;
+  text-transform: uppercase;
   font-size: 30px;
 }
 
@@ -10,6 +10,7 @@ div {
   background-color: hotpink;
   color: black;
   font-family: monospace;
+  text-transform: uppercase;
   font-size: 30px;
 }
 /*# sourceMappingURL=style.css.map */
