--- a/Website/main.scss
+++ b/Website/main.scss
@@ -5,12 +5,29 @@ body {
 }
 
 .wrapper {
-    grid-template-rows: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 10px;
-    @include testbox(#444, #fff);
+    display: grid;
+    grid-template-rows: 10vh 80vh 10vh;
 }
 
-.box {
-    @include testbox(#444, #fff);
-    @include text(150%, 20px);
+.header {
+    display: grid;
+    grid-template-columns: 50px 100px auto auto auto auto auto auto auto 150px;
+}
+
+.headertext {
+    padding: 40px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.logo {
+    font-size: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-left: 20px;
+}
+
+#emptyspace2 {
+    column-span: 2;
+    background-color: green;
 }
