--- a/Website/main.scss
+++ b/Website/main.scss
@@ -7,27 +7,43 @@ body {
 .wrapper {
     display: grid;
     grid-template-rows: 10vh 80vh 10vh;
+    align-items: center;
 }
 
 .header {
     display: grid;
-    grid-template-columns: 50px 100px auto auto auto auto auto auto auto 150px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    align-items: center;
 }
 
-.headertext {
-    padding: 40px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+.text {
+    @include text(150%, bold);
+    align-items: center;
 }
 
 .logo {
-    font-size: 100px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    padding-left: 20px;
+    @include text(400%, bold);
 }
 
-#emptyspace2 {
-    column-span: 2;
-    background-color: green;
+.content {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    align-items: center;
+}
+
+.contenttext {
+    width: 50%;
+    @include text(140%, normal);
+    margin-left: 25%;
+}
+
+.color {
+    @include text(350%, bold);
+    margin-left: 20%;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    align-items: center;
 }
