--- a/Website/main.css
+++ b/Website/main.css
@@ -2,73 +2,64 @@ body {
   margin: 0px;
 }
 
-.wrapper {
+#wrapper {
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 10vh 80vh 10vh;
       grid-template-rows: 10vh 80vh 10vh;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .header {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-columns: (auto)[8];
+      grid-template-columns: repeat(8, auto);
 }
 
-.text {
+.header > div {
+  margin: auto;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   font-size: 150%;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.logo {
-  font-size: 400%;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
 }
 
 .content {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: (minmax(100px, 1fr))[auto-fit];
-      grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  grid-gap: 10px;
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  background-color: #fff;
+  color: #444;
 }
 
-.contenttext {
-  width: 50%;
-  font-size: 140%;
+.content > div {
+  border: solid black 1px;
   font-family: Arial, Helvetica, sans-serif;
-  font-weight: normal;
-  margin-left: 25%;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 150%;
 }
 
-.color {
-  font-size: 350%;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  margin-left: 20%;
+.b {
+  grid-column: auto / span 1;
 }
 
 .footer {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(100px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-grid-columns: (auto)[4];
+      grid-template-columns: repeat(4, auto);
+}
+
+.footer > div {
+  margin: auto;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  font-size: 150%;
+  font-family: Arial, Helvetica, sans-serif;
 }
 /*# sourceMappingURL=main.css.map */
