--- a/Website/main.scss
+++ b/Website/main.scss
@@ -24,7 +24,7 @@ body {
 .content {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: 500px 500px 100px;
     background-color: #fff;
     color: #444;
 }
