--- a/Website/main.css
+++ b/Website/main.css
@@ -25,26 +25,60 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+button {
+  background-color: white;
+  border: none;
+  color: black;
+  font-size: 150%;
+}
+
 .content {
   display: -ms-grid;
   display: grid;
-  grid-gap: 10px;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  -ms-grid-columns: (12.5%)[8];
+      grid-template-columns: repeat(8, 12.5%);
+  -ms-grid-rows: (10%)[10];
+      grid-template-rows: repeat(10, 10%);
   background-color: #fff;
   color: #444;
 }
 
 .content > div {
-  border: solid black 1px;
   font-family: Arial, Helvetica, sans-serif;
-  border-radius: 5px;
   padding: 20px;
-  font-size: 150%;
+  font-size: 110%;
 }
 
-.b {
-  grid-column: auto / span 1;
+#text {
+  grid-column: 0.5;
+  grid-row: 0.75;
+  z-index: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-column: 3 / 6;
+  -ms-grid-row: 3;
+  grid-row: 3;
+}
+
+#bigtext {
+  grid-column: 0.33333;
+  grid-row: 0.66667;
+  z-index: 1;
+  font-size: 400%;
+  font-weight: bold;
+}
+
+#gradient {
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 2;
+  grid-column: 7 / 9;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 10;
+  grid-row: 1 / 11;
+  background: white;
+  background: -webkit-gradient(linear, left top, right top, color-stop(30%, rgba(0, 0, 0, 0)), to(#a00000));
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0) 30%, #a00000 100%);
+  z-index: 0;
 }
 
 .footer {
