--- a/Website/main.scss
+++ b/Website/main.scss
@@ -44,13 +44,11 @@ button {
 
 #text {
     @include pos(3, 6, 3, 4, 1);
-    grid-column: 3 / 6;
-    grid-row:  3;
 }
 
 #bigtext {
-    @include pos(3, 9, 2, 3, 1);
-    @include text(400%, bold)
+    @include pos(3, 9, 2, 3, 2);
+    @include text(400%, bold);
 }
 
 #gradient {
