--- a/Website/main.css
+++ b/Website/main.css
@@ -50,14 +50,22 @@ button {
 }
 
 #text {
-  grid-column: 0.5;
-  grid-row: 0.75;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 2;
+  grid-column: 3/span 2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/span 1;
   z-index: 1;
 }
 
 #bigtext {
-  grid-column: 0.33333;
-  grid-row: 0.66667;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 6;
+  grid-column: 3/span 6;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/span 1;
   z-index: 2;
   font-size: 400%;
   font-weight: bold;
