--- a/Website/_functions.scss
+++ b/Website/_functions.scss
@@ -8,3 +8,7 @@
     grid-row: $gs / span $ge;
     z-index: $z;
 }
+
+@mixin gradient($deg, $ar, $ag, $ab, $ao, $acent, $bdeg, $br, $bg, $bb, $bo, $bcent) {
+    background: linear-gradient($deg, rgba($ar, $ag, $ab, $ao) $acent%, rgba($br, $bg, $bb, $bo) $bcent%);
+}
