--- a/Website/_functions.scss
+++ b/Website/_functions.scss
@@ -1,14 +1,32 @@
-@mixin text($fs, $fw) {
+@mixin text($fs, $fw, $ff) {
     font-size: $fs;
     font-weight: $fw;
+    font-family: $ff;
 }
 
-@mixin pos($cs, $ce, $gs, $ge, $z) {
+@mixin grid($gc, $gr) {
+    display: grid;
+    grid-template-columns: $gc;
+    grid-template-rows: $gr;
+}
+
+@mixin gridpos($cs, $ce, $gs, $ge) {
     grid-column: $cs / span $ce;
     grid-row: $gs / span $ge;
+}
+
+@mixin pos($as, $m, $z) {
+    align-self: $as;
+    margin: $m;
     z-index: $z;
 }
 
 @mixin gradient($deg, $ar, $ag, $ab, $ao, $acent, $bdeg, $br, $bg, $bb, $bo, $bcent) {
-    background: linear-gradient($deg, rgba($ar, $ag, $ab, $ao) $acent%, rgba($br, $bg, $bb, $bo) $bcent%);
+    background: linear-gradient($deg, rgba($ar, $ag, $ab, $ao) $acent, rgba($br, $bg, $bb, $bo) $bcent);
 }
+
+@mixin color($bc, $c) {
+    background-color: $bc;
+    color: $c;
+}
+
