--- a/Website/main.scss
+++ b/Website/main.scss
@@ -1,53 +1,43 @@
 @import 'functions';
+@import 'variables';
 
 body {
     margin: 0px;
 }
 
 #wrapper {
-    display: grid;
-    grid-template-rows: 10vh 80vh 10vh;
+    @include grid(100%, 10vh 80vh 10vh);
 }
 
 .header {
-    display: grid;
-    grid-template-columns: repeat(8, auto);
+    @include grid(repeat(8, auto), 100%);
 }
 
 .header>div {
-    margin: auto;
-    align-self: center;
-    font-size: 150%;
-    font-family: Arial, Helvetica, sans-serif;
+    @include pos(center, auto, 1);
+    @include text(150%, normal, Arial);
 }
 
 button {
-    background-color: white;
-    border: none;
-    color: black;
-    font-size: 150%;
+    @include text(150%, normal, Arial);
+    @include color(#fff, #444);
 }
 
 .content {
-    display: grid;
-    grid-template-columns: repeat(8, 12.5%);
-    grid-template-rows: repeat(10, 10%);
-    background-color: #fff;
-    color: #444;
+    @include grid(repeat(8, 12.5%), repeat(10, 10%));
+    @include color(#fff, #444);
 }
 
 .content>div {
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 20px;
-    font-size: 110%;
+    @include text(110%, normal);
 }
 
 #text {
-    @include pos(3, 3, 3, 1, 1);
+    @include gridpos(3, 3, 3, 1);
 }
 
 #bigtext {
-    @include pos(3, 6, 2, 1, 2);
+    @include gridpos(3, 6, 2, 1);
     @include text(400%, bold);
 }
 
@@ -56,21 +46,17 @@ button {
 }
 
 #gradient {
-    grid-column: 7 / 9;
-    grid-row: 1 / 11;
-    background: rgb(255, 255, 255);
+    @include gridpos(7, 1, 1, 10);
+    @include color(none, #fff);
     background: linear-gradient(90deg, rgba(0, 0, 0, 0) 30%, rgba(160, 0, 0, 1) 100%);
     z-index: 0;
 }
 
 .footer {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
+    @include grid(repeat(4, auto), 100%);
 }
 
 .footer>div {
-    margin: auto;
-    align-self: center;
-    font-size: 150%;
-    font-family: Arial, Helvetica, sans-serif;
+    @include pos(center, auto, 1);
+    @include text(150%, normal, Arial);
 }
