--- a/Website/main.scss
+++ b/Website/main.scss
@@ -1,8 +1,8 @@
 @import 'functions';
-@import 'variables';
+@import "./_variables.scss";
 
 body {
-    margin: 0px;
+    @include pos(none, 0, 1);
 }
 
 #wrapper {
@@ -15,21 +15,21 @@ body {
 
 .header>div {
     @include pos(center, auto, 1);
-    @include text(150%, normal, Arial);
+    @include text($menutext, normal, Arial);
 }
 
 button {
-    @include text(150%, normal, Arial);
-    @include color(#fff, #444);
+    @include text($menutext, normal, Arial);
+    @include color($color2, $color1);
 }
 
 .content {
     @include grid(repeat(8, 12.5%), repeat(10, 10%));
-    @include color(#fff, #444);
+    @include color($color2, $color1);
 }
 
 .content>div {
-    @include text(110%, normal);
+    @include text($normaltext, normal);
 }
 
 #text {
@@ -38,18 +38,18 @@ button {
 
 #bigtext {
     @include gridpos(3, 6, 2, 1);
-    @include text(400%, bold);
+    @include text($bigtext, bold);
 }
 
 #logo {
-    @include text(400%, bold);
+    @include text($bigtext, bold);
 }
 
 #gradient {
     @include gridpos(7, 1, 1, 10);
-    @include color(none, #fff);
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 30%, rgba(160, 0, 0, 1) 100%);
-    z-index: 0;
+    @include color(none, $color2);
+    @include graduent(90deg, 0, 0, 0, 0, 30%, 160, 0, 0, 1, 100%);
+    @include pos(none, 0, 0);
 }
 
 .footer {
@@ -58,5 +58,5 @@ button {
 
 .footer>div {
     @include pos(center, auto, 1);
-    @include text(150%, normal, Arial);
+    @include text($menutext, normal, Arial);
 }
